--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ env:
     - "GEM=railties"
     - "GEM=ap"
     - "GEM=am,amo,as,av,aj"
+    - "GEM=as PRESERVE_TIMEZONES=1"
     - "GEM=ar:mysql"
     - "GEM=ar:mysql2"
     - "GEM=ar:sqlite3"
